refactor: remove unused code and add jwt middleware
